--- a/project1/source/dashboard/dashboard.ui
+++ b/project1/source/dashboard/dashboard.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>대시보드</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
