--- a/project1/source/signup/signup.ui
+++ b/project1/source/signup/signup.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>회원가입</string>
   </property>
   <widget class="QLineEdit" name="name_signup">
    <property name="geometry">
