--- a/project1/source/home/home.ui
+++ b/project1/source/home/home.ui
@@ -13,381 +13,52 @@
   <property name="windowTitle">
    <string>홈</string>
   </property>
-  <widget class="QLabel" name="rtChart_label">
-   <property name="geometry">
-    <rect>
-     <x>640</x>
-     <y>140</y>
-     <width>400</width>
-     <height>40</height>
-    </rect>
+  <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="leftMargin">
+    <number>250</number>
    </property>
-   <property name="font">
-    <font>
-     <pointsize>28</pointsize>
-    </font>
+   <property name="rightMargin">
+    <number>250</number>
    </property>
-   <property name="text">
-    <string>실시간 차트</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignmentFlag::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QLabel" name="news_label">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>140</y>
-     <width>400</width>
-     <height>40</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>28</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>주요 뉴스</string>
-   </property>
-   <property name="textFormat">
-    <enum>Qt::TextFormat::AutoText</enum>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignmentFlag::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>20</y>
-     <width>470</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>16</pointsize>
-    </font>
-   </property>
-   <property name="placeholderText">
-    <string>종목명·지수명 입력</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="searchButton">
-   <property name="geometry">
-    <rect>
-     <x>810</x>
-     <y>20</y>
-     <width>70</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>14</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>🔍</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btnLogin">
-   <property name="geometry">
-    <rect>
-     <x>950</x>
-     <y>20</y>
-     <width>110</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>로그인</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="balance_label">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>20</y>
-     <width>260</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QWidget" name="verticalLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>560</x>
-     <y>200</y>
-     <width>560</width>
-     <height>341</height>
-    </rect>
-   </property>
-   <layout class="QVBoxLayout" name="home_chart">
-    <property name="sizeConstraint">
-     <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
-    </property>
-    <property name="leftMargin">
-     <number>50</number>
-    </property>
-    <property name="topMargin">
-     <number>20</number>
-    </property>
-    <property name="rightMargin">
-     <number>50</number>
-    </property>
-    <property name="bottomMargin">
-     <number>20</number>
-    </property>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_5">
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_7">
-        <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_8">
-          <item>
-           <layout class="QVBoxLayout" name="verticalLayout_2">
-            <item>
-             <widget class="QLabel" name="label_title_2">
-              <property name="font">
-               <font>
-                <pointsize>24</pointsize>
-                <bold>true</bold>
-               </font>
-              </property>
-              <property name="text">
-               <string>기업명</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="label_price_2">
-              <property name="font">
-               <font>
-                <pointsize>24</pointsize>
-                <bold>false</bold>
-               </font>
-              </property>
-              <property name="text">
-               <string>가격</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_increment_2">
-            <property name="font">
-             <font>
-              <pointsize>18</pointsize>
-             </font>
-            </property>
-            <property name="text">
-             <string>차이</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignmentFlag::AlignBottom|Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft</set>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_percentage_2">
-            <property name="font">
-             <font>
-              <pointsize>12</pointsize>
-              <underline>false</underline>
-             </font>
-            </property>
-            <property name="text">
-             <string>퍼센트</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignmentFlag::AlignBottom|Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft</set>
-            </property>
-            <property name="wordWrap">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_percentage_symbol_2">
-            <property name="font">
-             <font>
-              <pointsize>12</pointsize>
-              <underline>false</underline>
-             </font>
-            </property>
-            <property name="text">
-             <string>%</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignmentFlag::AlignBottom|Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft</set>
-            </property>
-            <property name="wordWrap">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-       </layout>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_10"/>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QLabel" name="news_title1">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>200</y>
-     <width>400</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="news_description1">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>225</y>
-     <width>400</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="news_date1">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>275</y>
-     <width>200</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="news_divide1">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>300</y>
-     <width>400</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>-------------------------------------------------------------------------------</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="news_date1_2">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>400</y>
-     <width>200</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="news_title1_2">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>325</y>
-     <width>400</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="news_description1_2">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>350</y>
-     <width>400</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="news_divide1_2">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>425</y>
-     <width>400</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>-------------------------------------------------------------------------------</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="news_date1_3">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>525</y>
-     <width>200</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="news_title1_3">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>450</y>
-     <width>400</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="news_description1_3">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>475</y>
-     <width>400</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
-   </property>
-  </widget>
+   <item>
+    <widget class="QLabel" name="balance_label">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="font">
+      <font>
+       <pointsize>16</pointsize>
+      </font>
+     </property>
+     <property name="placeholderText">
+      <string>종목명 입력</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="searchButton">
+     <property name="font">
+      <font>
+       <pointsize>14</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>🔍</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="btnLogin">
+     <property name="text">
+      <string>로그인</string>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
