--- a/project1/source/dashboard/dashboard.ui
+++ b/project1/source/dashboard/dashboard.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>대시보드</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_3">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <property name="leftMargin">
     <number>50</number>
    </property>
@@ -27,11 +27,19 @@
     <number>30</number>
    </property>
    <item>
+    <layout class="QVBoxLayout" name="layout_banking"/>
+   </item>
+   <item>
     <layout class="QVBoxLayout" name="layout_stock">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QLabel" name="lbl_name">
+         <property name="font">
+          <font>
+           <pointsize>26</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>이름</string>
          </property>
@@ -39,6 +47,11 @@
        </item>
        <item>
         <widget class="QLabel" name="label_2">
+         <property name="font">
+          <font>
+           <pointsize>18</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>님, 안녕하세요</string>
          </property>
@@ -50,6 +63,11 @@
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QLabel" name="lbl_balance">
+         <property name="font">
+          <font>
+           <pointsize>22</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>금액</string>
          </property>
@@ -57,6 +75,11 @@
        </item>
        <item>
         <widget class="QLabel" name="label_8">
+         <property name="font">
+          <font>
+           <pointsize>16</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>원</string>
          </property>
@@ -72,18 +95,12 @@
       </layout>
      </item>
      <item>
-      <widget class="QLabel" name="label_4">
-       <property name="text">
-        <string>주식 목록</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QVBoxLayout" name="layout_banking">
-     <item>
       <widget class="QLabel" name="label_7">
+       <property name="font">
+        <font>
+         <pointsize>18</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>최근 거래 내역</string>
        </property>
